[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pyiapws"
version = "0.3.0"
authors = [{name = "Milan Skocic", email = "milan.skocic@icloud.com"}]
description = "pyiapws: IAPWS for python."
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers=["Development Status :: 5 - Production/Stable",
             "Intended Audience :: Science/Research",
             "License :: OSI Approved :: MIT License"]

[project.urls]
Documentation = "https://milanskocic.github.io/iapws-docs/index.html"
Source = "https://github.com/MilanSkocic/iapws-py"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyiapws = ["libciapws.*", "libgfortran*", "libquadmath*", "libgcc_s*", "libwinpthread*"]
